infra/db.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blog-db

spec:

  selector:
    matchLabels:
      app: blog-db

  template:
    metadata:
      labels:
        app: blog-db

    spec:
      volumes:
      - name: postgres-pv-storage
        persistentVolumeClaim:
          claimName: blog-db
      containers:
      - name: blog-db
        image: postgres:alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: blog-db
  labels:
    app: blog-db
spec:
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: blog-db
